--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@ deflator
     <!--images of stste wise analysis-->
     <div class="statwrap">
       <div class="statimg">
-        <img src="/images/1.png" />
-        <img src="/images/2.png" />
+        <img src="1.png" />
+        <img src="2.png" />
 
-        <img src="/images/4.jpg" />
-        <img src="/images/5.jpg" />
-        <img src="/images/6.jpg" />
-        <img src="/images/7.jpg" />
+        <img src="4.jpg" />
+        <img src="5.jpg" />
+        <img src="6.jpg" />
+        <img src="7.jpg" />
 
       </div>
     </div>
@@ -167,7 +167,7 @@ deflator
           <!-- Card 1 -->
           <div class="card">
             <div class="card-img">
-              <img src="/images/i1.png" alt="chirag img" />
+              <img src="i1.png" alt="chirag img" />
             </div>
             <div class="card-info">
               <h2 class="card-name">Rajat</h2>
@@ -183,7 +183,7 @@ deflator
           <!-- Card 2 -->
           <div class="card">
             <div class="card-img">
-              <img src="/images/i2.png" alt="manish img" />
+              <img src="i2.png" alt="manish img" />
             </div>
             <div class="card-info">
               <h2 class="card-name">Tarun</h2>
@@ -198,7 +198,7 @@ deflator
           <!-- Card 3 -->
           <div class="card">
             <div class="card-img">
-              <img src="/images/i3.png" alt="alok img" />
+              <img src="i3.png" alt="alok img" />
             </div>
             <div class="card-info">
               <h2 class="card-name">Abhishek</h2>
