--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       src="https://kit.fontawesome.com/45be275c63.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" href="/images/logo.jpeg" type="image/x-icon" />
+    <link rel="shortcut icon" href="logo.jpeg" type="image/x-icon" />
     <title>EVS</title>
   </head>
   <body>
